adicionando imagens, Ajax, detalhar, main, form mais detalhado

--- a/app/views/Pessoas/detalhar.html
+++ b/app/views/Pessoas/detalhar.html
@@ -3,6 +3,7 @@
 
 <p>${pessoa.nome}</p>
 <p>${pessoa.email}</p>
+<p>${pessoa.usuario?.perfil}</p>
 <p>${pessoa.problema}</p>
 
 <a class="btn btn-primary" href="@{Pessoas.form}">Cadastrar novo</a>
