--- a/app/views/Pessoas/form.html
+++ b/app/views/Pessoas/form.html
@@ -1,4 +1,5 @@
 #{extends 'main.html' /}
+#{set title:'Netinho da Vó' /}
 <head>
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -15,7 +16,7 @@
 
 		<section id="hero" class="hero section light-background">
 
-			<img src="@{'/public/images/unnamed.jpg'}" alt="" data-aos="fade-in">
+			<img src="@{'/public/images/istockphoto-1717120374-612x612.jpg'}" alt="" data-aos="fade-in">
 
 			<div class="container position-relative">
 
@@ -126,36 +127,42 @@
 
 					<div class="col-lg-6 position-relative align-self-start"
 						data-aos="fade-up" data-aos-delay="200">
-						<img src="assets/img/about.jpg" class="img-fluid" alt=""> <a
-							href="https://www.youtube.com/shorts/EvTjJbrjTgw"
+						<img src="@{'/public/images/istockphoto-1717120374-612x612.jpg'}" class="img-fluid" alt=""> <a
+							href="https://www.youtube.com/watch?v=5svQcoMNasY"
 							class="glightbox pulsating-play-btn"></a>
 					</div>
 
 					<div class="col-lg-6 content" data-aos="fade-up"
 						data-aos-delay="100">
-						<h3>Sobre nós</h3>
-						<p>Dolor iure expedita id fuga asperiores qui sunt consequatur
-							minima. Quidem voluptas deleniti. Sit quia molestiae quia quas
-							qui magnam itaque veritatis dolores. Corrupti totam ut eius
-							incidunt reiciendis veritatis asperiores placeat.</p>
+						<h3>SOBRE NÓS</h3>
+						<p>	Nosso site nasceu com um propósito claro: tornar a tecnologia mais acessível para idosos.
+							 Sabemos que, para muitas pessoas, computadores e celulares podem parecer complicados — 
+							 e é exatamente por isso que estamos aqui.
+
+						
+						
+						</p>
 						<ul>
 							<li><i class="fa-solid fa-vial-circle-check"></i>
 								<div>
-									<h5>Ullamco laboris nisi ut aliquip consequat</h5>
-									<p>Magni facilis facilis repellendus cum excepturi quaerat
-										praesentium libre trade</p>
+									<h5>NOSSOS PRINCÍPIOS</h5>
+									<p>	Acreditamos que todo mundo merece usar a tecnologia com segurança, 
+										confiança e autonomia. Por isso, oferecemos orientações simples, explicações passo a passo e um suporte
+										 pensado especialmente para quem está dando os primeiros passos no mundo digital.
+</p>
 								</div></li>
 							<li><i class="fa-solid fa-pump-medical"></i>
 								<div>
-									<h5>Magnam soluta odio exercitationem reprehenderi</h5>
-									<p>Quo totam dolorum at pariatur aut distinctio dolorum
-										laudantium illo direna pasata redi</p>
+									<h5>NOSSO OBJETIVO</h5>
+									<p>	Nossa missão é facilitar o dia a dia, aproximar pessoas e mostrar que aprender não tem idade. 
+										Estamos sempre atualizando nossos conteúdos para garantir que qualquer dúvida — por menor que seja — 
+										encontre aqui uma resposta clara e amiga.
+</p>
 								</div></li>
 							<li><i class="fa-solid fa-heart-circle-xmark"></i>
 								<div>
-									<h5>Voluptatem et qui exercitationem</h5>
-									<p>Et velit et eos maiores est tempora et quos dolorem
-										autem tempora incidunt maxime veniam</p>
+									<h5>Tecnologia sem complicação, para todos!</h5>
+							
 								</div></li>
 						</ul>
 					</div>
@@ -171,9 +178,8 @@
 
 			<!-- Section Title -->
 			<div class="container section-title" data-aos="fade-up">
-				<h2>Services</h2>
-				<p>Necessitatibus eius consequatur ex aliquid fuga eum quidem
-					sint consectetur velit</p>
+				<h2>SERVIÇOS</h2>
+				<p>Aqui estão alguns de nossos serviços</p>
 			</div>
 			<!-- End Section Title -->
 
@@ -188,11 +194,9 @@
 								<i class="fas fa-heartbeat"></i>
 							</div>
 							<a href="#" class="stretched-link">
-								<h3>Nesciunt Mete</h3>
+								<h3>HARDWARE</h3>
 							</a>
-							<p>Provident nihil minus qui consequatur non omnis maiores.
-								Eos accusantium minus dolores iure perferendis tempore et
-								consequatur.</p>
+							<p>Hardware é o nome que damos às peças físicas do computador, aquelas que podemos ver e tocar. É como o “corpo” da máquina: o teclado onde digitamos, o mouse que usamos para clicar, a tela onde vemos as coisas e as partes internas que fazem tudo funcionar. Sem essas peças, o computador não consegue ligar nem fazer nada.</p>
 						</div>
 					</div>
 					<!-- End Service Item -->
@@ -204,10 +208,9 @@
 								<i class="fas fa-pills"></i>
 							</div>
 							<a href="#" class="stretched-link">
-								<h3>Eosle Commodi</h3>
+								<h3>SOFTWARE</h3>
 							</a>
-							<p>Ut autem aut autem non a. Sint sint sit facilis nam iusto
-								sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+							<p>Software é como o “cérebro” do computador, aquilo que dá as instruções para ele funcionar. São os programas que usamos no dia a dia, como WhatsApp, navegador de internet, jogos ou o próprio Windows. Diferente do hardware, o software não é algo que a gente toca — ele é o que aparece na tela e permite que o computador faça as tarefas que queremos.</p>
 						</div>
 					</div>
 					<!-- End Service Item -->
@@ -219,10 +222,9 @@
 								<i class="fas fa-hospital-user"></i>
 							</div>
 							<a href="#" class="stretched-link">
-								<h3>Ledo Markt</h3>
+								<h3>INTERNET</h3>
 							</a>
-							<p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur.
-								Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+							<p>Internet é como uma grande rede de caminhos que liga computadores do mundo inteiro. Ela permite que a gente envie mensagens, veja vídeos, pesquise coisas e fale com outras pessoas, tudo em poucos segundos. É como se fosse uma “estrada invisível” por onde as informações viajam para chegar até você.</p>
 						</div>
 					</div>
 					<!-- End Service Item -->
@@ -234,10 +236,9 @@
 								<i class="fas fa-dna"></i>
 							</div>
 							<a href="#" class="stretched-link">
-								<h3>Asperiores Commodit</h3>
+								<h3>SISTEMA OPERACIONAL</h3>
 							</a>
-							<p>Non et temporibus minus omnis sed dolor esse consequatur.
-								Cupiditate sed error ea fuga sit provident adipisci neque.</p>
+							<p>Sistema operacional é o programa principal do computador ou do celular, aquele que organiza tudo e faz o aparelho funcionar. Ele é quem controla as outras aplicações, mostra a tela inicial e permite que você abra programas, salve arquivos e use a internet. Exemplos são o Windows, o Android e o iPhone (iOS). Sem o sistema operacional, o aparelho não saberia o que fazer.</p>
 							<a href="#" class="stretched-link"></a>
 						</div>
 					</div>
@@ -250,10 +251,9 @@
 								<i class="fas fa-wheelchair"></i>
 							</div>
 							<a href="#" class="stretched-link">
-								<h3>Velit Doloremque</h3>
+								<h3>APLICATIVOS</h3>
 							</a>
-							<p>Cumque et suscipit saepe. Est maiores autem enim facilis
-								ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
+							<p>Aplicativos são programas que usamos para fazer tarefas específicas no celular ou no computador. Podem servir para conversar (como WhatsApp), ver vídeos (YouTube), jogar, ouvir música ou até pagar contas. Eles funcionam dentro do sistema operacional e deixam o uso do aparelho mais fácil e útil no dia a dia.</p>
 							<a href="#" class="stretched-link"></a>
 						</div>
 					</div>
@@ -266,10 +266,9 @@
 								<i class="fas fa-notes-medical"></i>
 							</div>
 							<a href="#" class="stretched-link">
-								<h3>Dolori Architecto</h3>
+								<h3>SERVIÇOS GERAIS</h3>
 							</a>
-							<p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut
-								neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
+							<p>Oferecemos ajuda para resolver dúvidas e dificuldades do dia a dia com celular e computador. Seja para ajustar configurações, instalar programas, organizar arquivos, atualizar o aparelho ou resolver pequenos problemas, estamos aqui para tornar tudo mais fácil e prático. Nosso objetivo é acompanhar cada passo com paciência e clareza, para que você use a tecnologia com mais segurança e tranquilidade.</p>
 							<a href="#" class="stretched-link"></a>
 						</div>
 					</div>
@@ -282,14 +281,13 @@
 		</section>
 		<!-- /Services Section -->
 
-		<!-- Departments Section -->
+		<!-- Erros Section -->
 		<section id="departments" class="departments section">
 
 			<!-- Section Title -->
 			<div class="container section-title" data-aos="fade-up">
-				<h2>Departments</h2>
-				<p>Necessitatibus eius consequatur ex aliquid fuga eum quidem
-					sint consectetur velit</p>
+				<h2>ERROS FREQUENTES</h2>
+				
 			</div>
 			<!-- End Section Title -->
 
@@ -299,15 +297,15 @@
 					<div class="col-lg-3">
 						<ul class="nav nav-tabs flex-column">
 							<li class="nav-item"><a class="nav-link active show"
-								data-bs-toggle="tab" href="#departments-tab-1">Cardiology</a></li>
+								data-bs-toggle="tab" href="#departments-tab-1">A tela fica toda preta / travada</a></li>
 							<li class="nav-item"><a class="nav-link"
-								data-bs-toggle="tab" href="#departments-tab-2">Neurology</a></li>
+								data-bs-toggle="tab" href="#departments-tab-2">O Wi-Fi desconecta ou a internet some</a></li>
 							<li class="nav-item"><a class="nav-link"
-								data-bs-toggle="tab" href="#departments-tab-3">Hepatology</a></li>
+								data-bs-toggle="tab" href="#departments-tab-3">O celular ou computador está muito lento</a></li>
 							<li class="nav-item"><a class="nav-link"
-								data-bs-toggle="tab" href="#departments-tab-4">Pediatrics</a></li>
+								data-bs-toggle="tab" href="#departments-tab-4">O teclado está digitando coisas erradas</a></li>
 							<li class="nav-item"><a class="nav-link"
-								data-bs-toggle="tab" href="#departments-tab-5">Eye Care</a></li>
+								data-bs-toggle="tab" href="#departments-tab-5">O som não sai</a></li>
 						</ul>
 					</div>
 					<div class="col-lg-9 mt-4 mt-lg-0">
@@ -315,15 +313,10 @@
 							<div class="tab-pane active show" id="departments-tab-1">
 								<div class="row">
 									<div class="col-lg-8 details order-2 order-lg-1">
-										<h3>Cardiology</h3>
-										<p class="fst-italic">Qui laudantium consequatur laborum
-											sit qui ad sapiente dila parde sonata raqer a videna mareta
-											paulona marka</p>
-										<p>Et nobis maiores eius. Voluptatibus ut enim blanditiis
-											atque harum sint. Laborum eos ipsum ipsa odit magni. Incidunt
-											hic ut molestiae aut qui. Est repellat minima eveniet eius et
-											quis magni nihil. Consequatur dolorem quaerat quos qui
-											similique accusamus nostrum rem vero</p>
+										<h3>A tela fica toda preta / travada</h3>
+										<p class="fst-italic">									Como arrumar:
+										<p class="textos_erros">											Segure o botão de ligar/desligar por alguns segundos até o aparelho reiniciar. Às vezes ele só precisa “descansar” um pouquinho para voltar ao normal.</p>
+																					</p>
 									</div>
 									<div class="col-lg-4 text-center order-1 order-lg-2">
 										<img src="assets/img/departments-1.jpg" alt=""
@@ -334,15 +327,9 @@
 							<div class="tab-pane" id="departments-tab-2">
 								<div class="row">
 									<div class="col-lg-8 details order-2 order-lg-1">
-										<h3>Et blanditiis nemo veritatis excepturi</h3>
-										<p class="fst-italic">Qui laudantium consequatur laborum
-											sit qui ad sapiente dila parde sonata raqer a videna mareta
-											paulona marka</p>
-										<p>Ea ipsum voluptatem consequatur quis est. Illum error
-											ullam omnis quia et reiciendis sunt sunt est. Non aliquid
-											repellendus itaque accusamus eius et velit ipsa voluptates.
-											Optio nesciunt eaque beatae accusamus lerode pakto madirna
-											desera vafle de nideran pal</p>
+										<h3>O Wi-Fi desconecta ou a internet some</h3>
+										<p class="fst-italic">Como arrumar:</p>
+										<p>Abra as configurações e desligue e ligue o Wi-Fi novamente. Se não funcionar, desligue o modem da internet da tomada por 10 segundos e ligue de novo. Isso costuma resolver rapidinho.</p>
 									</div>
 									<div class="col-lg-4 text-center order-1 order-lg-2">
 										<img src="assets/img/departments-2.jpg" alt=""
@@ -353,15 +340,9 @@
 							<div class="tab-pane" id="departments-tab-3">
 								<div class="row">
 									<div class="col-lg-8 details order-2 order-lg-1">
-										<h3>Impedit facilis occaecati odio neque aperiam sit</h3>
-										<p class="fst-italic">Eos voluptatibus quo. Odio similique
-											illum id quidem non enim fuga. Qui natus non sunt dicta dolor
-											et. In asperiores velit quaerat perferendis aut</p>
-										<p>Iure officiis odit rerum. Harum sequi eum illum
-											corrupti culpa veritatis quisquam. Neque necessitatibus illo
-											rerum eum ut. Commodi ipsam minima molestiae sed laboriosam a
-											iste odio. Earum odit nesciunt fugiat sit ullam. Soluta et
-											harum voluptatem optio quae</p>
+										<h3>O celular ou computador está muito lento</h3>
+										<p class="fst-italic">Como arrumar: </p>
+										<p>Feche os aplicativos abertos que não está usando ou reinicie o aparelho. Também vale apagar fotos repetidas e arquivos que não precisa mais, pra liberar espaço.</p>
 									</div>
 									<div class="col-lg-4 text-center order-1 order-lg-2">
 										<img src="assets/img/departments-3.jpg" alt=""
@@ -372,15 +353,9 @@
 							<div class="tab-pane" id="departments-tab-4">
 								<div class="row">
 									<div class="col-lg-8 details order-2 order-lg-1">
-										<h3>Fuga dolores inventore laboriosam ut est accusamus
-											laboriosam dolore</h3>
-										<p class="fst-italic">Totam aperiam accusamus. Repellat
-											consequuntur iure voluptas iure porro quis delectus</p>
-										<p>Eaque consequuntur consequuntur libero expedita in
-											voluptas. Nostrum ipsam necessitatibus aliquam fugiat debitis
-											quis velit. Eum ex maxime error in consequatur corporis
-											atque. Eligendi asperiores sed qui veritatis aperiam quia a
-											laborum inventore</p>
+										<h3>O teclado está digitando coisas erradas</h3>
+										<p class="fst-italic">Como arrumar: </p>
+										<p>Às vezes o teclado muda para outro idioma sem querer. Vá em Configurações > Teclado/Idioma e coloque de volta “Português (Brasil)”. Depois disso, tudo volta ao normal.</p>
 									</div>
 									<div class="col-lg-4 text-center order-1 order-lg-2">
 										<img src="assets/img/departments-4.jpg" alt=""
@@ -391,14 +366,9 @@
 							<div class="tab-pane" id="departments-tab-5">
 								<div class="row">
 									<div class="col-lg-8 details order-2 order-lg-1">
-										<h3>Est eveniet ipsam sindera pad rone matrelat sando
-											reda</h3>
-										<p class="fst-italic">Omnis blanditiis saepe eos autem qui
-											sunt debitis porro quia.</p>
-										<p>Exercitationem nostrum omnis. Ut reiciendis repudiandae
-											minus. Omnis recusandae ut non quam ut quod eius qui. Ipsum
-											quia odit vero atque qui quibusdam amet. Occaecati sed est
-											sint aut vitae molestiae voluptate vel</p>
+										<h3>O som não sai</h3>
+										<p class="fst-italic">Como arrumar: </p>
+										<p>Verifique se o volume não está no mínimo ou no modo silencioso. No computador, veja se há um fone conectado, pois às vezes isso desativa o som das caixas.</p>
 									</div>
 									<div class="col-lg-4 text-center order-1 order-lg-2">
 										<img src="assets/img/departments-5.jpg" alt=""
@@ -420,9 +390,8 @@
 
 			<!-- Section Title -->
 			<div class="container section-title" data-aos="fade-up">
-				<h2>Frequently Asked Questions</h2>
-				<p>Necessitatibus eius consequatur ex aliquid fuga eum quidem
-					sint consectetur velit</p>
+				<h2>PERGUNTAS FREQUENTES</h2>
+				
 			</div>
 			<!-- End Section Title -->
 
@@ -435,19 +404,16 @@
 						<div class="faq-container">
 
 							<div class="faq-item faq-active">
-								<h3>Non consectetur a erat nam at lectus urna duis?</h3>
+								<h3>Aqui estão algumas perguntas frequentes</h3>
 								<div class="faq-content">
-									<p>Feugiat pretium nibh ipsum consequat. Tempus iaculis
-										urna id volutpat lacus laoreet non curabitur gravida.
-										Venenatis lectus magna fringilla urna porttitor rhoncus dolor
-										purus non.</p>
+									<p>Nos envie sua pergunta!</p>
 								</div>
 								<i class="faq-toggle bi bi-chevron-right"></i>
 							</div>
 							<!-- End Faq item-->
 
 							<div class="faq-item">
-								<h3>Feugiat scelerisque varius morbi enim nunc faucibus?</h3>
+								<h3>“Por que meu celular/computador está tão lento?”</h3>
 								<div class="faq-content">
 									<p>Dolor sit amet consectetur adipiscing elit pellentesque
 										habitant morbi. Id interdum velit laoreet id donec ultrices.
@@ -460,8 +426,7 @@
 							<!-- End Faq item-->
 
 							<div class="faq-item">
-								<h3>Dolor sit amet consectetur adipiscing elit
-									pellentesque?</h3>
+								<h3>“Como faço para conectar no Wi-Fi?”</h3>
 								<div class="faq-content">
 									<p>Eleifend mi in nulla posuere sollicitudin aliquam
 										ultrices sagittis orci. Faucibus pulvinar elementum integer
@@ -475,8 +440,7 @@
 							<!-- End Faq item-->
 
 							<div class="faq-item">
-								<h3>Ac odio tempor orci dapibus. Aliquam eleifend mi in
-									nulla?</h3>
+								<h3>“É seguro clicar nesse link/mensagem?”</h3>
 								<div class="faq-content">
 									<p>Dolor sit amet consectetur adipiscing elit pellentesque
 										habitant morbi. Id interdum velit laoreet id donec ultrices.
@@ -489,7 +453,7 @@
 							<!-- End Faq item-->
 
 							<div class="faq-item">
-								<h3>Tempus quam pellentesque nec nam aliquam sem et tortor?</h3>
+								<h3>“Como faço para atualizar meu celular ou um aplicativo?”</h3>
 								<div class="faq-content">
 									<p>Molestie a iaculis at erat pellentesque adipiscing
 										commodo. Dignissim suspendisse in est ante in. Nunc vel risus
@@ -502,7 +466,7 @@
 							<!-- End Faq item-->
 
 							<div class="faq-item">
-								<h3>Perspiciatis quod quo quos nulla quo illum ullam?</h3>
+								<h3>“Onde ficam minhas fotos?”</h3>
 								<div class="faq-content">
 									<p>Enim ea facilis quaerat voluptas quidem et dolorem. Quis
 										et consequatur non sed in suscipit sequi. Distinctio ipsam
@@ -588,13 +552,13 @@
 					value="${p ? 'Editar':'Cadastrar'}" /> </br> </br>
 				</br>
 			</form>
-			<div class="btn btn-primary	">
-				<a href="@{atendimentos.listar}" class="menu-btn">
-					<button>Ir para Lista de Atendimentos</button>
+		<!--	#{if user?.perfil == 'Responsavel'} -->
+			<div class="btn btn-primary">
+				<a href="@{atendimentos.listar}" type="submit">
+					<button class="btn btn-primary">Ir para Lista de Atendimentos</button>
 				</a>
 			</div>
-			<input class="btn btn-primary" type="submit"
-				value="@{atendimentos.listar}" />
+	<!--#{/if}-->
 			<div class="mb-5" data-aos="fade-up" data-aos-delay="200">
 				<iframe style="border: 0; width: 100%; height: 270px;"
 					src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
