--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,7 +10,7 @@
 	href="@{'/public/bootstrap-5.3.6/css/bootstrap.min.css'}">
 #{get 'moreStyles' /}
 <link rel="shortcut icon" type="image/png"
-	href="@{'/public/images/favicon.png'}">
+	href="@{'/public/images/Logo_NetinhoDaVo.png'}">
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Index - Medilab Bootstrap Template</title>
@@ -20,7 +20,7 @@
 <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+  <link rel="shortcut icon" type="image/png" href="@{'/public/images/Logo_NetinhoDaVo.png'}">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
