--- a/app/views/main.html
+++ b/app/views/main.html
@@ -91,142 +91,134 @@
     </div>
 
   </header> 
-	#{if flash.error}
-	<div class="alert alert-danger alert-dismissible fade show"
-		role="alert">
-		<strong>Algo deu errado:</strong> ${flash.error}
-		<button type="button" class="btn-close" data-bs-dismiss="alert"
-			aria-label="Close"></button>
-	</div>
-	#{/if} #{if flash.success}
-	<div class="alert alert-success alert-dismissible fade show"
-		role="alert">
-		<strong>Sucesso!</strong> ${flash.success}
-		<button type="button" class="btn-close" data-bs-dismiss="alert"
-			aria-label="Close"></button>
-	</div>
-	#{/if} #{if session['usuarioLogado']}
-	<p>
-		${session['usuarioLogado']} <a href="@{Logins.logout}">Logout</a>
-	</p>
-	#{/if}
-	<div class="container">
-		<h1>#{get 'title' /}</h1>
-		<hr />
 
-		#{doLayout /}
+  #{if flash.error}
+    <div class="container mt-3">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>Algo deu errado:</strong> ${flash.error}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+  #{/if} 
+  #{if flash.success}
+    <div class="container mt-3">
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <strong>Sucesso!</strong> ${flash.success}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+  #{/if}
+  
+  #{if session['usuarioLogado']}
+    <div class="container text-end">
+        <small>Logado como: ${session['usuarioLogado']}</small> 
+        <a href="@{Logins.logout}" class="btn btn-sm btn-outline-danger ms-2">Sair</a>
+    </div>
+  #{/if}
 
-	</div>
-	
-	
+  #{doLayout /}
 
-	<script src="@{'/public/bootstrap-5.3.6/js/bootstrap.min.js'}"
-		type="text/javascript" charset="${_response_encoding}"></script>
-	<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}"
-		type="text/javascript" charset="${_response_encoding}"></script>
-	#{get 'moreScripts' /}
-</body>
-<footer id="footer" class="footer light-background">
+  <footer id="footer" class="footer light-background">
 
-	<div class="container footer-top">
-		<div class="row gy-4">
-			<div class="col-lg-4 col-md-6 footer-about">
-				<a href="@{Pessoas.form()}" class="logo d-flex align-items-center"> <span
-					class="sitename">ProjecTI</span>
-				</a>
-				<div class="footer-contact pt-3">
-					<p>IFRN-Campus João Câmara</p>
-					<p>João Câmara/RN</p>
-					<p class="mt-3">
-						<strong>Telefone:</strong> <span>4002-8922</span>
-					</p>
-					<p>
-						<strong>Email:</strong> <span>netinhodavo@gmail.com</span>
-					</p>
-				</div>
-				<div class="social-links d-flex mt-4">
-					<a href=""><i class="bi bi-twitter-x"></i></a> <a href=""><i
-						class="bi bi-facebook"></i></a> <a href=""><i
-						class="bi bi-instagram"></i></a> <a href=""><i
-						class="bi bi-linkedin"></i></a>
-				</div>
-			</div>
+  	<div class="container footer-top">
+  		<div class="row gy-4">
+  			<div class="col-lg-4 col-md-6 footer-about">
+  				<a href="@{Pessoas.form()}" class="logo d-flex align-items-center"> <span
+  					class="sitename">ProjecTI</span>
+  				</a>
+  				<div class="footer-contact pt-3">
+  					<p>IFRN-Campus João Câmara</p>
+  					<p>João Câmara/RN</p>
+  					<p class="mt-3">
+  						<strong>Telefone:</strong> <span>4002-8922</span>
+  					</p>
+  					<p>
+  						<strong>Email:</strong> <span>netinhodavo@gmail.com</span>
+  					</p>
+  				</div>
+  				<div class="social-links d-flex mt-4">
+  					<a href=""><i class="bi bi-twitter-x"></i></a> <a href=""><i
+  						class="bi bi-facebook"></i></a> <a href=""><i
+  						class="bi bi-instagram"></i></a> <a href=""><i
+  						class="bi bi-linkedin"></i></a>
+  				</div>
+  			</div>
 
-			<div class="col-lg-2 col-md-3 footer-links">
-				<h4>Useful Links</h4>
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About us</a></li>
-					<li><a href="#">Services</a></li>
-					<li><a href="#">Terms of service</a></li>
-					<li><a href="#">Privacy policy</a></li>
-				</ul>
-			</div>
+  			<div class="col-lg-2 col-md-3 footer-links">
+  				<h4>Useful Links</h4>
+  				<ul>
+  					<li><a href="#">Home</a></li>
+  					<li><a href="#">About us</a></li>
+  					<li><a href="#">Services</a></li>
+  					<li><a href="#">Terms of service</a></li>
+  					<li><a href="#">Privacy policy</a></li>
+  				</ul>
+  			</div>
 
-			<div class="col-lg-2 col-md-3 footer-links">
-				<h4>Our Services</h4>
-				<ul>
-					<li><a href="#">Web Design</a></li>
-					<li><a href="#">Web Development</a></li>
-					<li><a href="#">Product Management</a></li>
-					<li><a href="#">Marketing</a></li>
-					<li><a href="#">Graphic Design</a></li>
-				</ul>
-			</div>
+  			<div class="col-lg-2 col-md-3 footer-links">
+  				<h4>Our Services</h4>
+  				<ul>
+  					<li><a href="#">Web Design</a></li>
+  					<li><a href="#">Web Development</a></li>
+  					<li><a href="#">Product Management</a></li>
+  					<li><a href="#">Marketing</a></li>
+  					<li><a href="#">Graphic Design</a></li>
+  				</ul>
+  			</div>
 
-			<div class="col-lg-2 col-md-3 footer-links">
-				<h4>Hic solutasetp</h4>
-				<ul>
-					<li><a href="#">Molestiae accusamus iure</a></li>
-					<li><a href="#">Excepturi dignissimos</a></li>
-					<li><a href="#">Suscipit distinctio</a></li>
-					<li><a href="#">Dilecta</a></li>
-					<li><a href="#">Sit quas consectetur</a></li>
-				</ul>
-			</div>
+  			<div class="col-lg-2 col-md-3 footer-links">
+  				<h4>Hic solutasetp</h4>
+  				<ul>
+  					<li><a href="#">Molestiae accusamus iure</a></li>
+  					<li><a href="#">Excepturi dignissimos</a></li>
+  					<li><a href="#">Suscipit distinctio</a></li>
+  					<li><a href="#">Dilecta</a></li>
+  					<li><a href="#">Sit quas consectetur</a></li>
+  				</ul>
+  			</div>
 
-			<div class="col-lg-2 col-md-3 footer-links">
-				<h4>Nobis illum</h4>
-				<ul>
-					<li><a href="#">Ipsam</a></li>
-					<li><a href="#">Laudantium dolorum</a></li>
-					<li><a href="#">Dinera</a></li>
-					<li><a href="#">Trodelas</a></li>
-					<li><a href="#">Flexo</a></li>
-				</ul>
-			</div>
+  			<div class="col-lg-2 col-md-3 footer-links">
+  				<h4>Nobis illum</h4>
+  				<ul>
+  					<li><a href="#">Ipsam</a></li>
+  					<li><a href="#">Laudantium dolorum</a></li>
+  					<li><a href="#">Dinera</a></li>
+  					<li><a href="#">Trodelas</a></li>
+  					<li><a href="#">Flexo</a></li>
+  				</ul>
+  			</div>
 
-		</div>
-	</div>
+  		</div>
+  	</div>
 
-	<div class="container copyright text-center mt-4">
-		<p>
-			© <span>Copyright</span> <strong class="px-1 sitename">ProjecTI</strong>
-			<span>All Rights Reserved</span>
-		</p>
-		<div class="credits">
-			<!-- All the links in the footer should remain intact. -->
-			<!-- You can delete the links only if you've purchased the pro version. -->
-			<!-- Licensing information: https://bootstrapmade.com/license/ -->
-			<!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-			Designed by <a href="https://bootstrapmade.com/">Pedriin</a>
-			Distributed by <a href=“https://themewagon.com>PI 
-		</div>
-	</div>
+  	<div class="container copyright text-center mt-4">
+  		<p>
+  			© <span>Copyright</span> <strong class="px-1 sitename">ProjecTI</strong>
+  			<span>All Rights Reserved</span>
+  		</p>
+  		<div class="credits">
+  			<!-- All the links in the footer should remain intact. -->
+  			<!-- You can delete the links only if you've purchased the pro version. -->
+  			<!-- Licensing information: https://bootstrapmade.com/license/ -->
+  			<!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+  			Designed by <a href="https://bootstrapmade.com/">Pedriin</a>
+  			Distributed by <a href=“https://themewagon.com>PI 
+  		</div>
+  	</div>
 
-</footer>
-<!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  </footer>
+  <!-- Scroll Top -->
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/php-email-form/validate.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Main JS File -->
+    <script src="assets/js/main.js"></script>
 
-</html>
+  </html>
