Video teste retirado, video substituido e dado os Direitos

--- a/app/views/Pessoas/form.html
+++ b/app/views/Pessoas/form.html
@@ -128,7 +128,7 @@
 					<div class="col-lg-6 position-relative align-self-start"
 						data-aos="fade-up" data-aos-delay="200">
 						<img src="@{'/public/images/istockphoto-1717120374-612x612.jpg'}" class="img-fluid" alt=""> <a
-							href="https://www.youtube.com/watch?v=5svQcoMNasY"
+							href="https://www.youtube.com/shorts/MRw_lyvdkDA"
 							class="glightbox pulsating-play-btn"></a>
 					</div>
 
@@ -157,6 +157,9 @@
 									<p>	Nossa missão é facilitar o dia a dia, aproximar pessoas e mostrar que aprender não tem idade. 
 										Estamos sempre atualizando nossos conteúdos para garantir que qualquer dúvida — por menor que seja — 
 										encontre aqui uma resposta clara e amiga.
+										
+										Video pelo:
+										Gabriel Miranda
 </p>
 								</div></li>
 							<li><i class="fa-solid fa-heart-circle-xmark"></i>
@@ -563,7 +566,7 @@
 
 			<div class="mb-5" data-aos="fade-up" data-aos-delay="200">
 				<iframe style="border: 0; width: 100%; height: 270px;"
-					src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d48389.78314118045!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sus!4v1676961268712!5m2!1sen!2sus"
+					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.155996223781!2d-35.801029124139085!3d-5.543874155103179!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7b3dc71d7d45f05%3A0x67f3cb9a4fb3499d!2sIFRN%20-%20Campus%20Jo%C3%A3o%20C%C3%A2mara!5e0!3m2!1sen!2sus!4v1765739655141!5m2!1sen!2sus""
 					frameborder="0" allowfullscreen="" loading="lazy"
 					referrerpolicy="no-referrer-when-downgrade"></iframe>
 			</div>
